# tracy-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: USAGE.md
native/: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md
native/src/: main.cpp
src/tracy_mcp/: __init__.py  server.py
src/tracy_mcp/backend/: query_client.py
src/tracy_mcp/tools/: compare.py  frames.py  info.py  messages.py  plots.py  stats.py  timeline.py  tree.py
tests/: test_client.py  test_tools.py
