[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracy-mcp"
version = "0.1.0"
description = "MCP server for Tracy profiler trace files — zone stats, timeline queries, and cross-trace comparison"
authors = [{ name = "ajin" }]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
tracy-mcp = "tracy_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tracy_mcp"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real .tracy file (set TRACY_TEST_FILE)",
]
